base html syntax for our app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,24 +7,24 @@
 
 <div>
   <label>Use Letters</label>
-  <input type="checkbox" />
+  <input (change)="onChangeUseletters()" type="checkbox" />
 </div>
 
 <div>
   <label>Use Numbers</label>
-  <input type="checkbox" />
+  <input (change)="onChangeUseNumbers()" type="checkbox" />
 </div>
 
 <div>
   <label>Use Symbols</label>
-  <input type="checkbox" />
+  <input (change)="onChangeUseSymbols()" type="checkbox" />
 </div>
 
 <div>
-  <button>Generate!</button>
+  <button (click)="onButtonClick()">Generate!</button>
 </div>
 
 <div>
   <label>Your Password</label>
-  <input type="text" />
+  <input [value]="password" type="text" />
 </div>
