added property binding to disabled button on the view unless length and atlist one or all inclueds are selected

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,15 @@
 </div>
 
 <div>
-  <button (click)="onButtonClick()">Generate!</button>
+  <!-- button is disabled unless length and one or all inclueds are selected -->
+  <button
+    [disabled]="
+      !(length && (incluedeletters || incluedenumbers || incluedesymbols))
+    "
+    (click)="onButtonClick()"
+  >
+    Generate!
+  </button>
 </div>
 
 <div>
